2014-06-02 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: tagging this code as 2.2.0
    * src/rivet.h,src/rivetcmds/rivetCore.c: macro CHECK_REQUEST_REC moved from rivetCore.c to rivet.h
    * doc/xml/internals.xml: New section documenting how to extend mod_rivet with new commands written in C

2014-05-22 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/aida.sql: redifining responsability of class Aida (not to be officially released)

2014-04-17 Massimo Manghi <mxmanghi@apache.org>
    * src/: reintegrating modularization branch. Now every subsystem mod_rivet is made of (module, 
    channel, parser, commands, request multipart handling) can be developed separately
    * src/rivetcmds/rivetCore.c: reintroduced handling of the -string argument that disappeared 
    from Rivet_ParseCmd probably because of the merge with modular.
    * src/apache-2/mod-rivet.c: Corrected comments to Rivet_ParseExecString

2014-04-16 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/aida.tcl,dio_Tdbc.tcl,sql.tcl: more methods implemented in aida.tcl
    * doc/xml/commands.xml: new form '::rivet::inspect server' documented
    * src/rivetcmds/rivetInspect.c: adding is_virtual flag to dictionary returned by '::rivet::inspect server'
    * branches/modular: merging latest changes in trunk
    * trunk/src/rivetcmds/rivetInpect.c: adding is_virtual flag to dictionary returned by '::rivet::inspect server'

2014-04-11 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetcmds/rivetCore.c: misplaced check on request_rec in Rivet_InspectCmd
    * tests/failtest.tcl,failtest.test,checkfail.tcl: adding tests for ::rivet::inspect

2014-04-07 Massimo Manghi <mxmanghi@apache.org>
    * tests/failtest.[test|tcl],failcheck.tcl: implementing test for consistent error
    handling by commands that are supposed to refuse execution outside of a request processing
    * tests/inspect.tcl: implementing test of command '::rivet::inspect script'